--- a/Docfx2xml/docfx2xml/convertConfig.json
+++ b/Docfx2xml/docfx2xml/convertConfig.json
@@ -1,6 +1,7 @@
 ﻿{
   "yamlDataPath": "c:/TEMP_Opensquiggly/docfx_yaml",
   "xmlOutPath": "c:/TEMP_Opensquiggly/docfx_xml",
-  "xsltFilePath": "../text.xslt",
-  "saveToNamespaceFolders": "true"
+  "xsltFilePath": "../Templates/Default.xslt",
+  "saveToNamespaceFolders": "true",
+  "xmlConverterType": "default"
 }
