--- a/Docfx2xml/docfx2xml/convertConfig.json
+++ b/Docfx2xml/docfx2xml/convertConfig.json
@@ -3,5 +3,5 @@
   "xmlOutPath": "c:/TEMP_Opensquiggly/docfx_xml",
   "xsltFilePath": "../Templates/Default.xslt",
   "saveToNamespaceFolders": "true",
-  "xmlConverterType": "default"
+  "xmlConverterType": "custom"
 }
