Add additional config field for build openSquiggly tocLess tree files. Add template for xslt transform. test and some refactoring.

--- a/Docfx2xml/docfx2xml/Docfx2xml.csproj
+++ b/Docfx2xml/docfx2xml/Docfx2xml.csproj
@@ -18,10 +18,9 @@
       <None Update="convertConfig.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Xslt\Templates" />
+      <None Update="Xslt\Templates\Default.xslt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
