added additional xml converter type for ignore namespaces root xml files. Fixed in .opensquiggly files/folders names ordering

--- a/Docfx2xml/docfx2xml/convertConfig.template.json
+++ b/Docfx2xml/docfx2xml/convertConfig.template.json
@@ -3,6 +3,6 @@
   "xmlOutPath": "/path/to/xml/output",
   "xsltFilePath": "/path/to/xslt",
   "saveToNamespaceFolders": "true or false",
-  "xmlConverterType": "default or custom",
+  "xmlConverterType": "default, custom, customIgnoreNamespaces",
   "buildTocLessTreeFiles": "true or false"
 }
