--- a/Docfx2xml/docfx2xml/Docfx2xml.csproj
+++ b/Docfx2xml/docfx2xml/Docfx2xml.csproj
@@ -10,8 +10,12 @@
         <Description>Tool for convert docfx files to xml files for Opensquiggly.com</Description>
         <PackageProjectUrl>Opensquiggly.com</PackageProjectUrl>
         <RepositoryUrl>https://github.com/opensquiggly/docfx2xml</RepositoryUrl>
-        <PackageReleaseNotes>1.0.0  - tool for convert docfx .yml files to xml files and save to local path. Xml files for Opensquiggly.com
-1.0.1 - Add xml config data provider, add ConvertConfig.template.xml. Add file logger.</PackageReleaseNotes>
+        <PackageReleaseNotes>
+            1.0.0 - Tool for convert docfx .yml files to xml files and save to local path. Xml files for Opensquiggly.com 
+            1.0.1 - Add xml config data provider, add ConvertConfig.template.xml. Add file logger.
+            1.0.2 - Add new cmd verb 'init' for create and save new json and xml config files (if file is not exist), improve exception message for json config file running (when file is not exist)
+            1.0.3 - Fix bugs for xml file config.
+        </PackageReleaseNotes>
         <Company>Opensquiggly.com</Company>
         <AssemblyVersion>1.0.0</AssemblyVersion>
         <FileVersion>1.0.0</FileVersion>
@@ -24,7 +28,7 @@
         <Copyright>Opensquiggly.com</Copyright>
         <PackageTags>Opensquiggly.com</PackageTags>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.0.3</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
